# medicode

./: .gitignore  alipay.txt  backend.md  commend  data.md  font.md  supbase.txt
backend/: .env.example  medicode.db  pyproject.toml  requirements.txt  test_email.py  test_send_code.py
backend/app/: alipaytest.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: database.py
backend/app/db/models/: analysis.py  base.py  dataset.py  order.py  project.py  project_workflow.py  user.py  workflow_run.py  writing_polish.py
backend/app/schemas/: admin.py  advanced_analysis.py  auth.py  dataset.py  descriptive.py  payment.py  polish.py  project.py  report.py  user.py
backend/app/services/: advanced_modeling_service.py  alipay.txt  anova_service.py  auth_service.py  chisquare_service.py  clinical_workflow_validation_service.py  data_cleaning_service.py  dataset_kind_service.py  dataset_parser.py  email_service.py  grammar_polish_service.py  llm_client.py  payment_service.py  r_runtime.py  regression_export_service.py  regression_interpretation_service.py  regression_pdf_service.py  regression_service.py  repeated_measures_service.py  resource_service.py  storage_service.py  supabase_service.py  tableone_interpretation_service.py  tableone_service.py  ttest_service.py  user_service.py  workflow_run_service.py
backend/app/services/prompts/: grammar_polish_prompts.py  regression_prompts.py  (+1 more)
backend/demo_data/: data1.csv  demodata.xlsx  patient_demo_upload.csv
(+101 files in other folders)
