[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiosmtplib==3.0.2",
    "alembic==1.14.0",
    "alipay-sdk-python==3.7.1018",
    "asyncpg==0.30.0",
    "bcrypt==4.2.0",
    "email-validator==2.2.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "psycopg2>=2.9.11",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "pyjwt==2.10.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "sqlalchemy[asyncio]==2.0.36",
    "supabase==2.6.0",
    "uvicorn[standard]==0.32.0",
]
