[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiosmtplib==3.0.2",
    "alembic==1.14.0",
    "alipay-sdk-python==3.7.1018",
    "aiosqlite==0.20.0",
    "asyncpg==0.30.0",
    "bcrypt==4.2.0",
    "email-validator==2.2.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "pandas==2.2.3",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "pyjwt==2.10.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "openpyxl==3.1.5",
    "sqlalchemy[asyncio]==2.0.36",
    "supabase==2.6.0",
    "xlrd==2.0.1",
    "uvicorn[standard]==0.32.0",
    "tableone==0.9.5",
    "scipy==1.14.1",
]
